--- a/AngularJS-SocialNetwork/app/app.css
+++ b/AngularJS-SocialNetwork/app/app.css
@@ -3,7 +3,14 @@
 body {
 margin-top: 60px;
 }
+.border {
+  border: 1px solid black;
+  padding: 15px;
+}
 
+.margin-bottom-100 {
+  margin-bottom: 100px;
+}
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
@@ -48,3 +55,4 @@ input.ng-invalid.ng-dirty {
   content: "";
   padding: 0;
 }
+
